; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ehca/extr_hcp_if.c_hipz_h_query_int_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/ehca/extr_hcp_if.c_hipz_h_query_int_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipz_adapter_handle = type { i32 }

@H_QUERY_INT_STATE = common dso_local global i32 0, align 4
@H_SUCCESS = common dso_local global i64 0, align 8
@H_BUSY = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [33 x i8] c"Could not query interrupt state.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @hipz_h_query_int_state(i32 %0, i32 %1) #0 {
  %3 = alloca %struct.ipz_adapter_handle, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = getelementptr inbounds %struct.ipz_adapter_handle, %struct.ipz_adapter_handle* %3, i32 0, i32 0
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* @H_QUERY_INT_STATE, align 4
  %8 = getelementptr inbounds %struct.ipz_adapter_handle, %struct.ipz_adapter_handle* %3, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i64 @ehca_plpar_hcall_norets(i32 %7, i32 %9, i32 %10, i32 0, i32 0, i32 0, i32 0, i32 0)
  store i64 %11, i64* %5, align 8
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* @H_SUCCESS, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %21

15:                                               ; preds = %2
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* @H_BUSY, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %15
  %20 = call i32 @ehca_gen_err(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  br label %21

21:                                               ; preds = %19, %15, %2
  %22 = load i64, i64* %5, align 8
  ret i64 %22
}

declare dso_local i64 @ehca_plpar_hcall_norets(i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ehca_gen_err(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
